[package]
name = "perm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
random = ["rand"]
serde = ["dep:serde"]
default = ["random"]

[dependencies]
smallvec = "1.8"
rand = { version = "0.8", optional = true }
serde = { version = "1.0.190", features = ["derive"], optional = true }
